Revert "fix: flip card back not showing background color/text in editor"
This reverts commit 2d8a1ee1e23987b1f19e1d9040b85dc44e5712d8.

--- a/src/blocks/flip-card/editor.scss
+++ b/src/blocks/flip-card/editor.scss
@@ -56,11 +56,6 @@
 		&__container > .wp-block-designsetgo-flip-card-back {
 			box-sizing: border-box;
 			position: relative;
-			// CRITICAL: Override frontend opacity to show both cards in editor
-			opacity: 1 !important;
-			transform: none !important;
-			pointer-events: auto !important;
-			z-index: auto !important;
 
 			// Add label in editor
 			&::before {
